<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="60dp"
          android:text="@string/helpni"
          android:textColor="#00BCD4"
          android:textSize="34sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0" />


      <EditText
          android:id="@+id/editTextTextPersonName"
          android:layout_width="280dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:layout_marginTop="70dp"
          android:background="@drawable/custom_input_icon"
          android:drawableStart="@drawable/custom_person_icon"
          android:drawablePadding="12dp"
          android:ems="10"
          android:hint="Mobile number or email"
          android:inputType="textPersonName"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          android:textColorHint="#757575"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView" />

      <EditText
          android:id="@+id/editTextTextPassword"
          android:layout_width="280dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:layout_marginTop="30dp"
          android:background="@drawable/custom_input_icon"
          android:drawableStart="@drawable/custom_lock_icon"
          android:drawablePadding="12dp"
          android:ems="10"
          android:hint="Password"
          android:inputType="textPassword"
          android:paddingStart="12dp"
          android:paddingEnd="12dp"
          android:textColorHint="#757575"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

      <Button
          android:id="@+id/button3"
          android:layout_width="145dp"
          android:layout_height="60dp"
          android:layout_gravity="center"
          android:layout_marginTop="90dp"
          android:backgroundTint="#00BCD4"
          android:text="@string/log_in"
          android:textColor="@color/white"
          android:textSize="20sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="@string/lost_pswd"
          android:textColor="#00BCD4"
          android:textSize="16sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/button3"
          app:layout_constraintVertical_bias="0.257" />

      <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="60dp"
          android:orientation="horizontal"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView4">

          <TextView
              android:id="@+id/textView5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/dont_have_account"
              android:textColor="@color/gris_noir"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/textView6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:onClick="register"
              android:paddingLeft="6dp"
              android:text="@string/register"
              android:textColor="#00BCD4"
              android:textSize="20sp"
              android:textStyle="bold"
              tools:ignore="TouchTargetSizeCheck" />
      </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>