<?xml version="1.0" encoding="utf-8"?>
  <ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".regiAsso">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/helpni"
            android:textColor="#00BCD4"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/create_your_account"
            android:textColor="@color/gris_noir"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/already_have_an_account"
                android:textColor="@color/gris_noir"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:gravity="start"
                android:onClick="login"
                android:text="@string/log_in"
                android:textColor="#00BCD4"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextTextPersonName34"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/custom_asso_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Association Name"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName37"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/custum_location_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Location"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName34"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColorHint="#93938E"
            app:boxStrokeColor="#00BCD4"
            app:hintTextColor="#00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName37">

            <AutoCompleteTextView
                android:id="@+id/autoCom"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/custom_input_icon"
                android:drawableStart="@drawable/shelter_focused_icon"
                android:drawablePadding="12dp"
                android:hint="Rsources" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextTextPersonName31"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTime" />

        <EditText
            android:id="@+id/editTextTextPersonName32"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textWebEmailAddress"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName31"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextTextPersonName33"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName32" />

        <EditText
            android:id="@+id/editTextTextPersonName35"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName33" />

        <Button
            android:id="@+id/button"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#00BCD4"
            android:gravity="center"
            android:text="Create an account"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName35"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input_icon"
            android:drawableStart="@drawable/time"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="08:00 - 17:00"
            android:inputType="time"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>
